--- a/mockHTML/style.css
+++ b/mockHTML/style.css
@@ -6,7 +6,7 @@ body{
   padding: 0;
   margin: 0;
   font-family: 'Muli', sans-serif;
-  background-color: #F4F4F4;
+  background-color: #F4F4F4;//colore background di tutto il body
 }
 
 .header{
@@ -19,6 +19,8 @@ body{
 .container {
   margin: 5% 3%;
 }
+/*media queries servono per il response*/
+
 @media (min-width: 48em) {
   .container {
     margin: 2%;
@@ -66,8 +68,8 @@ body{
   }
 }
 .responsive-table thead th {
-  background-color: #afd2d1;
-  border: 1px solid #afd2d1;
+  background-color: #f5b95f;
+  border: 1px solid #f5b95f;
   font-weight: normal;
   text-align: center;
   color: white;
@@ -133,7 +135,7 @@ body{
 .responsive-table tfoot {
   font-size: .8em;
   font-style: italic;
-  background-color: #ccE3E1;
+  background-color: #f5b95f;
   color: #FFF;
   text-align: right;
 }
@@ -156,7 +158,7 @@ body{
   border: 2px solid #afd2d1;
 }
 .responsive-table tbody tr:hover{
-  background-color: #fae596;
+  background-color: #B0ADDE;
 }
 @media (min-width: 48em) {
   .responsive-table tbody tr {
@@ -172,7 +174,7 @@ body{
     background-color: #e6e9f0;
   }
   .responsive-table tbody tr:nth-of-type(even):hover {
-    background-color: #fae596;
+    background-color: #B0ADDE;
   }
 }
 .responsive-table tbody th[scope="row"] {
@@ -222,7 +224,7 @@ body{
 }
 .btn{
   border: 1px solid #ccE3E1;
-  color: #2b908f;
+  color: #3B3679;
   padding: 20px;
   width: 200px;
   text-align: center;
@@ -253,12 +255,13 @@ body{
   padding: 70px;
 }
 .cellStats{
-  width: 25vw;
+  width: 22vw;
   display: inline-block;
   text-align: center;
-  color: #2b908f;
+  color: white;
   font-size: 30px;
   border: 1px solid #ccE3E1;
+  background: #716BB1 ;
   padding: 20px 0;
   margin-left: 5px;
 }
