--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -331,6 +331,72 @@ table{
 }
 
 
+/* BEGIN:: QoodleView PAGE */
+.box {
+    width: 230px;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    margin: 0 10px;
+    position: relative;
+}
+.box img {
+    width: 230px;
+}
+.box i {
+    width: 50px;
+    height: 50px;
+    background: #ED277F ;
+    color: #ffffff ;
+    border-radius: 25px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 1.4rem;
+    position: absolute;
+    right: 20px;
+    top: 150px;
+    box-shadow: 0 0 4px 2px rgba(80, 80, 80, 0.1);
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.box h3 {
+    margin-left: 20px;
+}
+.box p {
+    margin-left: 20px;
+}
+.box #counter
+{
+  top: 0;
+  left: 5px;
+  background: #FFF;
+  color: #333
+}
+.box #minus
+{
+      left: 20px;
+}
+.box #one
+{
+  display: inline-block;
+  text-align: center;
+  width: 230px;
+  background-color: #CCC;
+  height: 172px;
+  color: #FFF
+}
+.box #spa {
+
+line-height: 172px;
+font-size: 60px;
+color: red
+
+}
+
+
+/* END:: QoodleView PAGE */
+
+
 /* BEGIN:: CREATE PAGE */
 
 .medium {
