--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -396,6 +396,15 @@ color: red
 
 }
 
+.panel  {
+  width: 70vw;
+  margin: 0 auto;
+  font-size: 22px;
+}
+.panel p{
+  margin-left: 20px;
+}
+
 
 /* END:: QoodleView PAGE */
 
