--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -404,6 +404,20 @@ color: red
 .panel p{
   margin-left: 20px;
 }
+.panel #BuyPanel{
+
+  display: inline-block;
+  position: relative;
+  float: right;
+  width: 20vw;
+  border: 3px solid #337ab7;
+  padding: 2px;
+  font-size: 22px;
+}
+.inlineRows
+{
+  width: 20vw;
+}
 
 
 /* END:: QoodleView PAGE */
