--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -339,7 +339,7 @@ table{
 
 .body h1 {
   padding-top: 15px;
-  font-family: "Times New Roman", Times, serif;;
+  font-family: "Times New Roman", Times, serif;
   color : #f5b95f;
   font-style: oblique;
   font-weight: bold;
@@ -350,6 +350,7 @@ table{
     text-align: left;
     padding-top: 15px;
     padding-left: 55px;
+    padding-bottom: 20px;
     color : #5888d6;
     font-family: "Times New Roman", Times, serif;
 }
@@ -454,6 +455,7 @@ color: red
   margin: 20px;
   text-align: center;
 }
+
 
 .col{
   display: inline-block;
