posizionato a destra il timer

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -337,6 +337,22 @@ table{
   src: url(../fonts/air.ttf);
 }
 
+#popover-basic{
+  font-size: 25px;
+}
+#popover-basic h3{
+  font-size: 20px;
+
+}
+
+#popover-div
+  {
+
+      align: right;
+
+  }
+
+
 .body h1 {
   padding-top: 15px;
   font-family: "Times New Roman", Times, serif;
