adattato qoodle element per utilizzo sia nel create che nella viw

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -766,7 +766,16 @@ option {
 
 
 /*BEGIN CREATE PAGE*/
-
+#list
+{
+  font-family: "Times New Roman", Times, serif;
+  font-style: oblique;
+  font-weight: bold;
+}
+#list h1
+{
+  color: #f5b95f;
+}
 
 .box h3
 {
