aggiunta dimensione massima dei campi nel create

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -354,9 +354,10 @@ table{
 .body h3 {
     width: 100%;
     margin-bottom: auto;
-    text-align: left;
+    text-align: center;
     padding-top: 15px;
-    padding-left: 55px;
+    padding-left: 5px;
+    padding-right: 5px;
     padding-bottom: 20px;
     color : #5888d6;
     font-family: "Times New Roman", Times, serif;
