--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -339,10 +339,19 @@ table{
 
 #popover-basic{
   font-size: 25px;
+  right:  2vw;
+  left: 70vw
 }
 #popover-basic h3{
   font-size: 20px;
 }
+#popover-div{
+  position: relative;
+  width: 100%;
+  top:20px
+
+}
+
 
 .body h1 {
   padding-top: 15px;
@@ -350,13 +359,33 @@ table{
   color : #f5b95f;
   font-style: oblique;
   font-weight: bold;
+  width: 60vw;
+  padding-right: 10vw;
 }
+#create{
+  padding:0px
+
+}
+
+
 .body h3 {
     width: 100%;
     margin-bottom: auto;
     text-align: center;
     padding-top: 15px;
     padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 20px;
+    color : #5888d6;
+    font-family: "Times New Roman", Times, serif;
+}
+
+.body #QoodleDescription {
+    width: 80vw;
+    margin-bottom: auto;
+    text-align: center;
+    padding-top: 15px;
+    padding-left: 4vw;
     padding-right: 5px;
     padding-bottom: 20px;
     color : #5888d6;
@@ -433,6 +462,9 @@ color: red
   margin: 0 auto;
   font-size: 30px;
   margin-left: 25vw;
+  margin-bottom: 5vh;
+  vertical-align: text-bottom;
+
 }
 
 /* END:: QoodleView PAGE */
@@ -787,7 +819,7 @@ option {
 .box .list-group
 {
   margin-bottom: 0px;
-  font-size: 20px
+  font-size: 20pxb
 }
 
 .fa.fa-settings
