--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,9 +22,23 @@ body{
 .hamburger{
   font-size: 35px;
   margin-right: 20px;
-  background-color: #ccE3E1;
+  background-color: #e2f4c7;
   padding: 10px;
-  color: #FFF
+  width: 60px;
+  color: #FFF;
+  padding: 8px 10px;
+  display: inline-block;
+  border-radius: 3px;
+}
+.hamburger.fa.fa-bars
+{
+  font-size: 40px;
+  text-align: center;
+}
+
+.ti-power-off
+{
+    font-size: 35px;
 }
 .containerMenu{
   position: absolute;
@@ -258,11 +272,12 @@ table{
 .btn.littleOne{
   font-size: 25px;
   margin-right: 20px;
-  background-color: #ccE3E1;
+  background-color: #e2f4c7;
   padding: 8px 10px;
   color: #FFF;
   display: inline-block;
-  width: 70px;
+  width: 60px;
+  height: 56px;
   cursor: pointer;
 }
 .responsive-table input{
@@ -884,9 +899,9 @@ option {
 }
 
 .list-group-item.list-group-item-success{
-  background-color: #eae374;
-  color: white;
+  color: #555;
   padding-left: 45px;
+  background-color: #f9d62e;
 }
 
 .list-group-item.list-group-item-danger{
@@ -896,9 +911,8 @@ option {
 
 .list-group-item.list-group-item-warning:hover {
   font-size: 32px;
-  color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  color: #fc913a!important;
+  background-color: white!important;
 }
 
 
@@ -907,6 +921,16 @@ option {
   position: absolute;
   left: 5px;
   opacity: 0.8;
+
+}
+#people
+{
+  position: absolute;
+  left: 5px;
+  opacity: 0.8;
+  width: 40px;
+  height: 40px;
+
 }
 
 
