--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -424,6 +424,7 @@ table{
   display: inline-block;
   text-align: center;
   width: 100%;
+  max-height: 210px;
   background-color: #CCC;
   height: 172px;
   color: #FFF
