--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,6 +19,17 @@ body{
   border-bottom: 1px solid #ddd;
 }
 
+#pad{
+  padding-right: 15px;
+  padding-left: 5px;
+}
+#name
+{
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Muli", sans;
+}
+
 .hamburger{
   font-size: 35px;
   margin-right: 20px;
