--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20,6 +20,28 @@ body{
   border-bottom: 0px solid #ddd;
 }
 
+.menu{
+  position: absolute;
+  top: 0px;
+  background-color: white;
+  height: 100vh;
+  width:100vw;
+  z-index: 999;
+  left:0
+}
+
+#menuElement{
+  background-color: #e2f4c7;
+  display: inline-block;
+  width:200px;
+  height:200px;
+  margin:20px;
+  color:grey;
+  border-radius: 5px
+}
+
+
+
 #pad{
   padding-right: 15px;
   padding-left: 5px;
