spostato style inline del menu, e aggiunta logout media query

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20,15 +20,30 @@ body{
   border-bottom: 0px solid #ddd;
 }
 
+@media screen and (max-width: 650px) {
+    #name, #logoutText{
+      display: none;
+    }
+}
+
+
+
 .menu{
   position: absolute;
   top: 0px;
   background-color: white;
   height: 100vh;
   width:100vw;
-  z-index: 999;
-  left:0
+  z-index: 998;
+  margin-right: 20px;
 }
+.toggleMenu{
+  font-size: 50px;
+  padding-right: 25px;
+}
+
+
+
 
 #menuElement{
   background-color: #e2f4c7;
@@ -39,8 +54,20 @@ body{
   color:grey;
   border-radius: 5px
 }
+#menuElement span{
+  font-size: 24px;
+  font-weight: bold
+}
 
+.boxMenu{
+height:70%;
+padding:10px}
 
+.boxMenu i
+{
+  font-size: 70px;
+  padding-top :30px
+}
 
 #pad{
   padding-right: 15px;
@@ -51,6 +78,13 @@ body{
   font-size: 25px;
   font-weight: bold;
   font-family: "Muli", sans;
+}
+
+.toggleMenu{
+  position: absolute;
+  margin: 10px; fontSize: 50px;
+  color: #555;
+  right: 20px;
 }
 
 .hamburger{
@@ -298,7 +332,6 @@ table{
   border: 1px solid #ccE3E1;
   color: #3B3679;
   padding: 20px;
-  width: 200px;
   text-align: center;
   cursor: pointer;
   display: inline-block;
