--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -425,6 +425,31 @@ table{
 
 /* BEGIN:: QoodleView PAGE */
 
+#mtimer
+{
+  background-color: #f9d62e;
+  opacity: 0.7;
+  margin: 10px;
+  padding: 7px;
+  border-radius: 8%;
+}
+
+
+#end
+{
+  text-align: center;
+  color: red;
+  font-size: 25px;
+  font-family: "Muli";
+}
+
+#time
+{
+  color: #555;
+  font-weight: bold;
+  font-size: 25px;
+  font-family: "Muli";
+}
 
 #popover-basic{
   font-size: 25px;
@@ -437,7 +462,8 @@ table{
 #popover-div{
   position: relative;
   width: 100%;
-  top:20px
+  top:20px;
+  height: 40;
 
 }
 
@@ -623,7 +649,7 @@ background-color: #e2f4c7 !important;
 }
 
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 660px) {
     #buyButton, #addButton{
       width: 300px;
     }
@@ -654,6 +680,7 @@ background-color: #e2f4c7 !important;
       width:200px;
       height:200px;
       margin:20px;
+      margin-bottom: 50px;
       color:grey;
       border-radius: 5px
     }
@@ -672,9 +699,29 @@ background-color: #e2f4c7 !important;
     #allMenu
     {
       text-align:  center;
-      margin: 16vh;
+      margin: 13vh;
     }
 
+
+    .floatRight button
+    {
+      margin-right: 8px;
+    }
+
+
+    #popover-div{
+      display: none;
+    }
+
+
+
+}
+
+@media screen and (min-width: 660px) {
+    #mtimer
+    {
+      display: none;
+    }
 }
 
 @media screen and (max-width: 950px) and (min-width: 650px) {
@@ -751,6 +798,7 @@ background-color: #e2f4c7 !important;
   display: inline-block;
   position: relative;
   padding-right: 15px;
+  margin-left: 28px;
   padding-left: 15px;
   padding-top: 30px;
 }
@@ -1208,6 +1256,12 @@ option {
 
 }
 
+
+
+.floatRight button
+{
+  margin-right: 20px;
+}
 
 /*END LIST PAGE*/
 
