--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -763,7 +763,7 @@ background-color: #e2f4c7 !important;
       margin-top: 80px;
     }
 
-    .modal-body
+    .modal-body #checkL
     {
       padding:35 px;
     }
